test/link/linkerscript-escapes-test.out
error: ./linkerscript-escapes-test.link(3): Illegal character escape
