test/link/linkerscript-escapes-test.link
ROM0
	"A\"B\tC\rD\nE"
	"in\{valid"
